[tool.poetry]
name = "01_machine-learning-with-python"
version = "1"
description = "[ Coursera ] IBM AI Engineering : Machine Learning with Python"
authors = ["0417taehyun <0417taehyun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-hdfscontents = "^0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
